Complete docker-compose

--- a/sage-hiring-web/src/Components/Form/style.sass
+++ b/sage-hiring-web/src/Components/Form/style.sass
@@ -5,10 +5,12 @@
             margin-left: 0;
         &.step-1 .form-step-container
             margin-left: -100%
+        &.step-2 .form-step-container
+            margin-left: -200%
         .form-step-container
-            width: 200%
+            width: 300%
             display: grid
-            grid-template-columns: 1fr 1fr
+            grid-template-columns: 1fr 1fr 1fr
             transition: 250ms margin-left ease-in-out
             .form-step-box
                 width: 100%
