--- a/sage-hiring-web/src/Components/List/style.sass
+++ b/sage-hiring-web/src/Components/List/style.sass
@@ -7,7 +7,7 @@
         height: 100%
     .list-grid-cards
         display: grid
-        grid-template-columns: 1fr 1fr 1fr 1fr
+        grid-template-columns: repeat(auto-fit, minmax(220px, 1fr))
         grid-gap: 2em
     .list-options-bar
         text-align: center
